(main): fix align text contact

--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -214,6 +214,7 @@
         justify-content: center;
         align-items: center;
         grid-gap: 20px;
+        text-align: center;
     }
 
     .icon {
